/*
Copyright 2015 The Kubernetes Authors All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

// This file was autogenerated by the command:
// $ go-to-protobuf
// Do not edit it manually!

syntax = 'proto2';

package k8s.io.kubernetes.pkg.runtime;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "k8s.io/kubernetes/pkg/api/resource/generated.proto";
import "k8s.io/kubernetes/pkg/util/intstr/generated.proto";

// Package-wide variables from generator "generated".
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_getters_all) = false;
option go_package = "runtime";

// RawExtension is used with EmbeddedObject to do a two-phase encoding of extension objects.
// 
// To use this, make a field which has RawExtension as its type in your external, versioned
// struct, and EmbeddedObject in your internal struct. You also need to register your
// various plugin types.
// 
// // Internal package:
// type MyAPIObject struct {
// 	runtime.TypeMeta `json:",inline"`
// 	MyPlugin runtime.EmbeddedObject `json:"myPlugin"`
// }
// type PluginA struct {
// 	runtime.PluginBase `json:",inline"`
// 	AOption string `json:"aOption"`
// }
// 
// // External package:
// type MyAPIObject struct {
// 	runtime.TypeMeta `json:",inline"`
// 	MyPlugin runtime.RawExtension `json:"myPlugin"`
// }
// type PluginA struct {
// 	runtime.PluginBase `json:",inline"`
// 	AOption string `json:"aOption"`
// }
// 
// // On the wire, the JSON will look something like this:
// {
// 	"kind":"MyAPIObject",
// 	"apiVersion":"v1",
// 	"myPlugin": {
// 		"kind":"PluginA",
// 		"aOption":"foo",
// 	},
// }
// 
// So what happens? Decode first uses json or yaml to unmarshal the serialized data into
// your external MyAPIObject. That causes the raw JSON to be stored, but not unpacked.
// The next step is to copy (using pkg/conversion) into the internal struct. The runtime
// package's DefaultScheme has conversion functions installed which will unpack the
// JSON stored in RawExtension, turning it into the correct object type, and storing it
// in the EmbeddedObject. (TODO: In the case where the object is of an unknown type, a
// runtime.Unknown object will be created and stored.)
// 
// +genprotoidl=true
message RawExtension {
  required bytes rawJSON = 1 [(gogoproto.customname) = "RawJSON"];
}

// TypeMeta is shared by all top level objects. The proper way to use it is to inline it in your type,
// like this:
// type MyAwesomeAPIObject struct {
//      runtime.TypeMeta    `json:",inline"`
//      ... // other fields
// }
// func (*MyAwesomeAPIObject) IsAnAPIObject() {}
// 
// TypeMeta is provided here for convenience. You may use it directly from this package or define
// your own with the same fields.
// 
// +genprotoidl=true
message TypeMeta {
  required string apiVersion = 1 [(gogoproto.customname) = "APIVersion", (gogoproto.nullable) = false];

  required string kind = 2 [(gogoproto.nullable) = false, (gogoproto.customname) = "Kind"];
}

// Unknown allows api objects with unknown types to be passed-through. This can be used
// to deal with the API objects from a plug-in. Unknown objects still have functioning
// TypeMeta features-- kind, version, etc.
// TODO: Make this object have easy access to field based accessors and settors for
// metadata and field mutatation.
// 
// +genprotoidl=true
message Unknown {
  required TypeMeta typeMeta = 1 [(gogoproto.customname) = "TypeMeta", (gogoproto.nullable) = false];

  // RawJSON will hold the complete JSON of the object which couldn't be matched
  // with a registered type. Most likely, nothing should be done with this
  // except for passing it through the system.
  required bytes rawJSON = 2 [(gogoproto.customname) = "RawJSON"];
}

