/*
Copyright 2018 The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package k8s.io.api.bulk.v1alpha1;

import "k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1beta1/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";
import "k8s.io/apimachinery/pkg/util/intstr/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

// BulkRequest contains a single request to bulk api.
message BulkRequest {
  // Opaque identifier used to match requests and responses.
  optional string requestId = 1;

  // Starts new watch.
  // +optional
  optional WatchOperation watch = 2;

  // Starts new watch.
  // +optional
  optional WatchListOperation watchList = 3;

  // Stops existing watch.
  // +optional
  optional StopWatchOperation stopWatch = 4;

  // Gets list of items.
  // +optional
  optional ListOperation list = 5;

  // Gets single item.
  // +optional
  optional GetOperation get = 6;
}

// BulkResponse contains a single response from bulk api.
message BulkResponse {
  // Opaque identifier propagated from the request.
  // Null for messages issued by server (WatchEvent, WatchStopped triggered by server)
  // +optional
  optional string requestId = 1;

  // Contains error details when request was failed.
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.Status failure = 2;

  // Sent when watch was manually stopped.
  // +optional
  optional WatchStopped watchStopped = 3;

  // Sent when new watch was started.
  // +optional
  optional WatchStarted watchStarted = 4;

  // Contains single watch event.
  // +optional
  optional BulkWatchEvent watchEvent = 5;

  // Contains single object.
  // +optional
  optional GetResult getResult = 6;

  // Contains single object.
  // +optional
  optional ListResult listResult = 7;
}

// BulkWatchEvent represents a single event to a watched resource.
message BulkWatchEvent {
  // Identifier of the watch.
  optional string watchId = 1;

  // Watch event.
  optional k8s.io.apimachinery.pkg.apis.meta.v1.WatchEvent watchEvent = 2;
}

// GetOperation is a request to perform bulk get/list.
message GetOperation {
  // Selector.
  optional ItemSelector itemSelector = 1;
}

// GetResult is a return value when existing watch was stopped.
message GetResult {
  // Single object.
  optional k8s.io.apimachinery.pkg.runtime.RawExtension item = 2;
}

// GroupVersionResource identifies resource.
message GroupVersionResource {
  // Name of APIGroup, defaults to core API group.
  // +optional
  optional string group = 1;

  // Version of APIGroup, defaults to preferred version.
  // +optional
  optional string version = 2;

  // Resource identifier (pods, events etc).  Note: this is not the kind.
  optional string resource = 3;
}

// ItemSelector is the query options to get/watch calls.
message ItemSelector {
  // Resource identifies requested resource.
  optional GroupVersionResource groupVersionResource = 1;

  // Name is the object name.
  optional string name = 5;

  // Namespace
  // +optional
  optional string namespace = 4;

  // Query options used to filter watched resources.
  // Field 'Watch' is ignored by bulk api.
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.GetOptions options = 6;
}

// ListOperation is a request to perform bulk get/list.
message ListOperation {
  // Selector.
  optional ListSelector listSelector = 1;
}

// ListResult is a return value when existing watch was stopped.
message ListResult {
  // List of resources.
  optional k8s.io.apimachinery.pkg.runtime.RawExtension item = 2;
}

// ListSelector is the query options to list/watchList calls.
message ListSelector {
  // Resource identifies requested resource.
  optional GroupVersionResource groupVersionResource = 1;

  // Namespace
  // +optional
  optional string namespace = 4;

  // Query options used to filter watched resources.
  // Field 'Watch' is ignored by bulk api.
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListOptions options = 2;
}

// StopWatchOperation is a request to stop existing watch.
message StopWatchOperation {
  // Identifier of the watch.
  optional string watchId = 1;
}

// WatchListOperation is a request to start new watch.
message WatchListOperation {
  // Identifier of the watch.
  optional string watchId = 1;

  // Selector.
  optional ListSelector listSelector = 2;
}

// WatchOperation is a request to start new watch.
message WatchOperation {
  // Identifier of the watch.
  optional string watchId = 1;

  // Selector.
  optional ItemSelector itemSelector = 2;
}

// WatchStarted is a return value when new watch was started.
message WatchStarted {
  // Identifier of the watch.
  optional string watchId = 1;
}

// WatchStopped is a return value when existing watch was stopped.
message WatchStopped {
  // Identifier of the watch.
  optional string watchId = 1;
}

